sdk/ionic-legacy/2.0/groups-retrieve-groups.mdx
---
title: "Retrieve Groups"
---

<Warning>
**Deprecated:** The Ionic Cordova SDK is deprecated. For new Ionic/Cordova applications, please use the [JavaScript SDK](/sdk/javascript/overview) which provides full compatibility with Ionic applications.
</Warning>



## Retrieve List of Groups

*In other words, as a logged-in user, how do I retrieve the list of groups I've joined and groups that are available?*

In order to fetch the list of groups, you can use the `GroupsRequest` class. To use this class i.e to create an object of the `GroupsRequest` class, you need to use the `GroupsRequestBuilder` class. The `GroupsRequestBuilder` class allows you to set the parameters based on which the groups are to be fetched.

The `GroupsRequestBuilder` class allows you to set the below parameters:

### Set Limit

This method sets the limit i.e. the number of groups that should be fetched in a single iteration.

<Tabs>
<Tab title="JavaScript">
```js
let limit = 30;
let groupsRequest = new CometChat.GroupsRequestBuilder()
  .setLimit(limit)
  .build();
```

</Tab>

</Tabs>

### Set Search Keyword

This method allows you to set the search string based on which the groups are to be fetched.

<Tabs>
<Tab title="JavaScript">
```js
let limit = 30;
let searchKeyword = "group";
let groupsRequest = new CometChat.GroupsRequestBuilder()
  .setLimit(limit)
  .setSearchKeyword(searchKeyword)
  .build();
```

</Tab>

</Tabs>

### Joined Only

This method when used, will ask the SDK to only return the groups that the user has joined or is a part of.

<Tabs>
<Tab title="JavaScript">
```js
let limit = 30;
let groupsRequest = new CometChat.GroupsRequestBuilder()
  .setLimit(limit)
  .joinedOnly(true)
  .build();
```

</Tab>

</Tabs>

### Set Tags

This method accepts a list of tags based on which the list of groups is to be fetched. The list fetched will only contain the groups that have been tagged with the specified tags.

<Tabs>
<Tab title="JavaScript">
```js
let limit = 30;
let tags = ["tag1", "tag2"];
let groupsRequest = new CometChat.GroupsRequestBuilder()
  .setLimit(limit)
  .setTags(tags)
  .build();
```

</Tab>

</Tabs>

### With Tags

This property when set to true will fetch tags data along with the list of groups.

<Tabs>
<Tab title="With Tags">
```
let limit = 30;
let groupsRequest = new CometChat.GroupsRequestBuilder()
  .setLimit(limit)
  .withTags(true)
  .build();
```

</Tab>

</Tabs>

Finally, once all the parameters are set to the builder class, you need to call the build() method to get the object of the `GroupsRequest` class.

Once you have the object of the `GroupsRequest` class, you need to call the `fetchNext()` method. Calling this method will return a list of `Group` objects containing n number of groups where n is the limit set in the builder class.

The list of groups fetched will only have the public and password type groups. The private groups will only be available if the user is a member of the group.

<Tabs>
<Tab title="Groups Request">
```
let limit = 30;
let groupsRequest = new CometChat.GroupsRequestBuilder()
  .setLimit(limit)
  .build();

groupsRequest.fetchNext().then(
  (groupList) => {
    console.log("Groups list fetched successfully", groupList);
  },
  (error) => {
    console.log("Groups list fetching failed with error", error);
  }
);
```

</Tab>

</Tabs>

## Retrieve Particular Group Details

*In other words, as a logged-in user, how do I retrieve information for a specific group?*

To get the information of a group, you can use the `getGroup()` method.

<Tabs>
<Tab title="JavaScript">
```js
var GUID = "GUID";
CometChat.getGroup(GUID).then(
  (group) => {
    console.log("Group details fetched successfully:", group);
  },
  (error) => {
    console.log("Group details fetching failed with exception:", error);
  }
);
```

</Tab>

</Tabs>

| Parameter | Description                                                  |
| --------- | ------------------------------------------------------------ |
| `GUID`    | The GUID of the group for whom the details are to be fetched |

It returns `Group` object containing the details of the group.
